--- a/jest.config.json
+++ b/jest.config.json
@@ -20,9 +20,11 @@
     }
   },
   "moduleNameMapper": {
+    "~/(.*)": "<rootDir/$1>",
     "@app/(.*)": "<rootDir>/app/$1",
     "@assets/(.*)": "<rootDir>/app/assets/$1",
-    "@components/(.*)": "<rootDir>/app/components/$1"
+    "@components/(.*)": "<rootDir>/app/components/$1",
+    "@styles/(.*)": "<rootDir>/app/styles/$1"
   },
   "fakeTimers": {
     "enableGlobally": true
