--- a/package.json
+++ b/package.json
@@ -26,18 +26,6 @@
     "typecheck": "tsc -b && tsc -b cypress",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
-  "prettier": {
-    "singleQuote": false,
-    "trailingComma": "es5",
-    "semi": true,
-    "bracketSpacing": true,
-    "printWidth": 120
-  },
-  "eslintIgnore": [
-    "/node_modules",
-    "/build",
-    "/public/build"
-  ],
   "dependencies": {
     "@prisma/client": "^3.11.1",
     "@remix-run/node": "^1.4.3",
@@ -68,6 +56,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.0.4",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.1",
     "@types/node": "^17.0.23",
@@ -85,7 +74,7 @@
     "msw": "^0.39.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
-    "prettier": "2.6.1",
+    "prettier": "^2.6.1",
     "prettier-plugin-prisma": "^3.14.0",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "prisma": "^3.14.0",
@@ -95,6 +84,24 @@
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
   },
+  "prettier": {
+    "singleQuote": false,
+    "trailingComma": "es5",
+    "semi": true,
+    "bracketSpacing": true,
+    "printWidth": 120,
+    "importOrder": [
+      "^@(app|assets|components|styles|utils)/(.*)$",
+      "^[./]"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
+  },
+  "eslintIgnore": [
+    "/node_modules",
+    "/build",
+    "/public/build"
+  ],
   "engines": {
     "node": ">=14"
   },
