--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/parser": "^5.27.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
+    "framer-motion": "^6.3.16",
     "jest": "^28.1.1",
     "jest-extended": "^2.0.0",
     "react": "^17.0.2",
