--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "prettier-plugin-tailwindcss": "^0.1.8",
     "prisma": "^3.14.0",
     "start-server-and-test": "^1.14.0",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
