--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "bcryptjs": "^2.4.3",
+    "clsx": "^1.2.1",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.16",
     "jest": "^28.1.1",
     "jest-extended": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "tailwind-merge": "^1.12.0",
     "tailwind-scrollbar": "^1.3.1",
     "tiny-invariant": "^1.2.0"
   },
@@ -72,6 +74,7 @@
     "cypress": "^9.5.3",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest-mock-extended": "^2.0.4",
     "msw": "^0.39.2",
     "npm-run-all": "^4.1.5",
