--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,5 @@
   "importOrder": ["^@(app|assets|components|styles|utils)/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"]
 }
