--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^11.0.13",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
     "next": "14.0.4",
@@ -20,6 +20,7 @@
     "tailwind-scrollbar": "^3.0.5"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
