--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-pin-input": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwind-scrollbar": "^3.0.5",
     "yup": "^1.4.0"
