--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
     "next": "^14.2.3",
+    "overlayscrollbars-react": "^0.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-pin-input": "^1.3.1",
